--- a/lesson_6.html
+++ b/lesson_6.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia illo exercitationem dolor voluptates! Reiciendis perspiciatis iure consequuntur explicabo corrupti modi beatae ad culpa, odio id, voluptates iusto fuga placeat nisi.</h1>
     
 </body>
 </html>
