--- a/lesson_6.html
+++ b/lesson_6.html
@@ -9,5 +9,6 @@
     <h1> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia illo exercitationem 
     dolor voluptates! Reiciendis perspiciatis iure consequuntur explicabo corrupti modi beatae ad culpa, odio id,
     voluptates iusto fuga placeat nisi.</h1> 
+    <div> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus nesciunt nisi repellendus tempora, asperiores quisquam, debitis commodi laudantium voluptas numquam incidunt maxime quia, hic mollitia illum tenetur! Natus, blanditiis eum?</div>
 </body>
 </html>
